Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,11 +26,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ride'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9a3ea6167373>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mride\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRide\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ride'"
+     ]
+    }
+   ],
    "source": [
-    "from ride import Ride"
+    "from ride import Ride\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'driver'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1008a84cbc1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# import Driver class here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdriver\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDriver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'driver'"
+     ]
+    }
+   ],
+   "source": [
+    "# import Driver class here\n",
+    "from driver import Driver\n",
+    "pass"
    ]
   },
   {
@@ -39,16 +75,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import Passenger class here"
+    "# import Passenger class here\n",
+    "from passenger import Passenger\n",
+    "pass"
    ]
   },
   {
@@ -71,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meryl = None\n",
-    "daniel = None\n",
+    "meryl = Passenger()\n",
+    "daniel = Passenger()\n",
     "print(meryl, daniel)"
    ]
   },
@@ -89,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -108,8 +137,8 @@
    },
    "outputs": [],
    "source": [
-    "ride_to_school = None\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride()\n",
+    "ride_home = Ride()\n",
     "print(ride_to_school, ride_home)"
    ]
   },
@@ -138,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
